kubernetes/python-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      imagePullSecrets:
        - name: falehregistry
      containers:
      - name: python-app
        image: elfaleh/python-app:latest
        ports:
        - containerPort: 5000
---
kind: Service
apiVersion: v1
metadata:
  name:  python-app-service
spec:
  selector:
    app:  python-app
  ports:
  - protocol: TCP
    port:  5000
    targetPort: 5000
