kubernetes/python-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  python-app-ingress
  namespace: python-app
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - secretName: app.test.fixed
  rules:
    - host: app.test.fixed
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-app-service
                port:
                  number: 5000
